completed onBoarding with animation

--- a/app/src/main/res/layout/activity_second_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_second_onboarding_screen.xml
@@ -78,7 +78,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="40dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="50dp"
+                    android:layout_marginStart="60dp"
                     tools:layout_editor_absoluteY="15dp"
                     tools:ignore="MissingConstraints" />
 
@@ -116,15 +116,15 @@
 
                 <TextView
                     android:id="@+id/heading"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/tell_us_about_your_property"
                     android:textSize="@dimen/H2"
                     android:textColor="@color/black"
                     android:fontFamily="@font/roboto_bold"
                     android:layout_marginTop="40dp"
-                    android:layout_marginStart="50dp"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/demoBackbtn"
                     app:layout_constraintTop_toBottomOf="@id/llBar"/>
 
                 <TextView
@@ -169,8 +169,9 @@
                         android:id="@+id/cardGallery"
                         android:layout_width="110dp"
                         android:layout_height="0dp"
-                        android:layout_marginEnd="50dp"
+                        android:layout_marginEnd="60dp"
                         android:layout_marginTop="5dp"
+                        app:cardElevation="2dp"
                         app:cardCornerRadius="10dp"
                         app:strokeWidth="2dp"
                         app:cardBackgroundColor="@color/white"
@@ -224,19 +225,11 @@
                         android:id="@+id/property_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Property Name*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="Property Name"
                         android:layout_marginTop="20dp"
-                        android:layout_marginStart="50dp"
+                        android:layout_marginStart="60dp"
                         android:layout_marginEnd="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toStartOf="@id/cardGallery"
@@ -258,19 +251,9 @@
                         android:id="@+id/propertyTypeLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/ClickableTextInputLayoutStyle"
                         android:hint="Property Type"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconDrawable="@drawable/svg_arrow_down"
-                        app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/property_layout"
                         app:layout_constraintTop_toBottomOf="@id/property_layout"
                         app:layout_constraintStart_toStartOf="@id/property_layout">
@@ -291,17 +274,9 @@
                         android:id="@+id/website_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                        style="@style/TextInputLayoutStyle"
                         android:hint="Website link (Optional)"
                         android:layout_marginTop="10dp"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintStart_toStartOf="@id/property_layout"
@@ -323,19 +298,9 @@
                         android:id="@+id/address_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Property Address*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="Property Address"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconDrawable="@drawable/vector_location"
                         app:layout_constraintEnd_toEndOf="@id/cardGallery"
                         app:layout_constraintStart_toStartOf="@id/property_layout"
                         app:layout_constraintTop_toBottomOf="@+id/website_layout">
@@ -355,19 +320,9 @@
                         android:id="@+id/pincode_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="PinCode*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="PinCode"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconTint="@color/black"
                         app:layout_constraintEnd_toStartOf="@id/city_layout"
                         app:layout_constraintStart_toStartOf="@id/address_layout"
                         app:layout_constraintTop_toBottomOf="@+id/address_layout">
@@ -387,21 +342,10 @@
                         android:id="@+id/city_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="City*"
+                        style="@style/ClickableTextInputLayoutStyle"
+                        android:hint="City"
                         android:layout_marginStart="10dp"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconDrawable="@drawable/svg_arrow_down"
-                        app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/address_layout"
                         app:layout_constraintStart_toEndOf="@id/pincode_layout"
                         app:layout_constraintTop_toBottomOf="@+id/address_layout">
@@ -424,20 +368,9 @@
                         android:id="@+id/state_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="State*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/ClickableTextInputLayoutStyle"
+                        android:hint="State"
                         android:layout_marginTop="10dp"
-                        app:endIconDrawable="@drawable/svg_arrow_down"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconTint="@color/black"
                         app:layout_constraintEnd_toStartOf="@id/currency_layout"
                         app:layout_constraintStart_toStartOf="@id/pincode_layout"
                         app:layout_constraintTop_toBottomOf="@id/pincode_layout">
@@ -460,21 +393,10 @@
                         android:id="@+id/currency_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Basic Currency*"
+                        style="@style/ClickableTextInputLayoutStyle"
+                        android:hint="Basic Currency"
                         android:layout_marginStart="10dp"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconDrawable="@drawable/svg_arrow_down"
-                        app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/city_layout"
                         app:layout_constraintStart_toEndOf="@id/state_layout"
                         app:layout_constraintTop_toBottomOf="@+id/city_layout">
