--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -214,17 +214,9 @@
                         android:id="@+id/firstNameLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="First Name*"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="First Name"
                         android:layout_marginStart="50dp"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toStartOf="@id/lastNameLayout"
@@ -246,18 +238,10 @@
                         android:id="@+id/lastNameLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Last Name*"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="Last Name"
                         android:layout_marginEnd="50dp"
                         android:layout_marginStart="10dp"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintStart_toEndOf="@id/firstNameLayout"
@@ -279,20 +263,9 @@
                         android:id="@+id/designationLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Designation*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/ClickableTextInputLayoutStyle"
+                        android:hint="Designation"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
-                        app:endIconMode="custom"
-                        app:endIconDrawable="@drawable/svg_arrow_down"
-                        app:endIconTint="@color/black"
                         app:layout_constraintStart_toStartOf="@id/firstNameLayout"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
                         app:layout_constraintTop_toBottomOf="@id/firstNameLayout">
@@ -305,6 +278,7 @@
                             android:inputType="text"
                             android:textColorHint="@color/secondary"
                             android:textColor="@color/secondary"
+                            android:clickable="true"
                             android:editable="false"
                             android:focusable="true"/>
 
@@ -314,17 +288,10 @@
                         android:id="@+id/phoneLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Phone Number*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="Phone Number"
+                        app:placeholderText="+91 0000000000"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
@@ -336,7 +303,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:inputType="text"
+                            android:inputType="number"
                             android:textColorHint="@color/secondary"
                             android:textColor="@color/secondary" />
 
@@ -346,17 +313,10 @@
                         android:id="@+id/emailLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Email*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="Email"
+                        app:placeholderText="abc@xyz.com"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="clear_text"
                         app:endIconTint="@color/black"
                         app:layout_constraintStart_toStartOf="@id/firstNameLayout"
@@ -378,17 +338,9 @@
                         android:id="@+id/passwordLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Password*"
-                        android:textColorHint="@color/black"
-                        app:boxStrokeColor="@color/black"
-                        app:hintTextColor="@color/secondary"
+                        style="@style/TextInputLayoutStyle"
+                        android:hint="Password"
                         android:layout_marginTop="10dp"
-                        app:boxStrokeWidthFocused="2dp"
-                        app:boxCornerRadiusTopStart="10dp"
-                        app:boxCornerRadiusBottomStart="10dp"
-                        app:boxCornerRadiusBottomEnd="10dp"
-                        app:boxCornerRadiusTopEnd="10dp"
                         app:endIconMode="password_toggle"
                         app:endIconTint="@color/black"
                         app:layout_constraintEnd_toEndOf="@id/lastNameLayout"
@@ -400,7 +352,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:inputType="text"
+                            android:inputType="textPassword"
                             android:textColorHint="@color/secondary"
                             android:textColor="@color/secondary" />
 
