--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -205,6 +205,7 @@
                 app:layout_constraintTop_toBottomOf="@id/title"/>
 
             <ImageView
+                android:id="@+id/propertyTypeImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/svg_add_property"
