--- a/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
+++ b/app/src/main/res/layout/activity_third_chain_onboarding_screen.xml
@@ -158,16 +158,9 @@
                             android:id="@+id/property_layout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                            style="@style/TextInputLayoutStyle"
                             android:hint="Property Type Name"
-                            android:textColorHint="@color/secondary"
-                            app:boxStrokeColor="@color/black"
-                            app:boxStrokeWidthFocused="2dp"
                             android:layout_marginTop="20dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxCornerRadiusBottomStart="10dp"
-                            app:boxCornerRadiusBottomEnd="10dp"
-                            app:boxCornerRadiusTopEnd="10dp"
                             app:endIconMode="clear_text"
                             app:endIconTint="@color/black">
 
@@ -187,8 +180,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="45dp"
                             android:layout_marginTop="15dp"
-                            app:cardCornerRadius="10dp"
+                            app:strokeWidth="1dp"
                             app:strokeColor="@color/subtitle"
+                            app:cardCornerRadius="10dp"
                             app:cardBackgroundColor="@color/white"
                             app:layout_constraintStart_toStartOf="@id/roomsInPL"
                             app:layout_constraintEnd_toEndOf="@id/roomsInPL"
@@ -234,6 +228,7 @@
                             android:layout_height="45dp"
                             android:layout_marginTop="15dp"
                             app:cardCornerRadius="10dp"
+                            app:strokeWidth="1dp"
                             app:strokeColor="@color/subtitle"
                             app:cardBackgroundColor="@color/white"
                             app:layout_constraintTop_toBottomOf="@id/pincode_layout"
@@ -300,16 +295,9 @@
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                            style="@style/TextInputLayoutStyle"
                             android:hint="Tax Name"
-                            android:textColorHint="@color/secondary"
-                            app:boxStrokeColor="@color/black"
-                            app:boxStrokeWidthFocused="2dp"
                             android:layout_marginTop="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxCornerRadiusBottomStart="10dp"
-                            app:boxCornerRadiusBottomEnd="10dp"
-                            app:boxCornerRadiusTopEnd="10dp"
                             app:endIconMode="clear_text"
                             app:endIconTint="@color/black">
 
@@ -326,16 +314,9 @@
                         <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                            style="@style/TextInputLayoutStyle"
                             android:hint="Registration Number"
-                            android:textColorHint="@color/secondary"
-                            app:boxStrokeColor="@color/black"
-                            app:boxStrokeWidthFocused="2dp"
                             android:layout_marginTop="10dp"
-                            app:boxCornerRadiusTopStart="10dp"
-                            app:boxCornerRadiusBottomStart="10dp"
-                            app:boxCornerRadiusBottomEnd="10dp"
-                            app:boxCornerRadiusTopEnd="10dp"
                             app:endIconMode="clear_text"
                             app:endIconTint="@color/black">
 
@@ -355,6 +336,7 @@
                             android:layout_height="45dp"
                             android:layout_marginTop="15dp"
                             app:cardCornerRadius="10dp"
+                            app:strokeWidth="1dp"
                             app:strokeColor="@color/subtitle"
                             app:cardBackgroundColor="@color/white"
                             app:layout_constraintTop_toBottomOf="@id/roomsInPL"
