--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -570,6 +570,27 @@
                 android:layout_marginStart="40dp"
                 app:layout_constraintTop_toBottomOf="@id/imagesT"/>
 
+<!--            <com.google.android.material.imageview.ShapeableImageView-->
+<!--                android:id="@+id/selectImage"-->
+<!--                android:layout_width="70dp"-->
+<!--                android:layout_height="70dp"-->
+<!--                android:layout_marginEnd="3dp"-->
+<!--                android:layout_marginTop="3dp"-->
+<!--                android:background="@color/unselectedBackground"-->
+<!--                app:shapeAppearance="@style/SquareCornerImageM"-->
+<!--                app:layout_constraintBottom_toBottomOf="@id/imagesRecycler"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/imagesRecycler"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/imagesRecycler"/>-->
+
+<!--            <ImageView-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:src="@drawable/svg_add_plus"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/selectImage"-->
+<!--                app:layout_constraintStart_toStartOf="@id/selectImage"-->
+<!--                app:layout_constraintTop_toTopOf="@id/selectImage"-->
+<!--                app:layout_constraintBottom_toBottomOf="@id/selectImage"/>-->
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
