--- a/app/src/main/res/layout/item_properties.xml
+++ b/app/src/main/res/layout/item_properties.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
-    android:layout_margin="10dp">
+    app:cardElevation="0dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginVertical="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,6 +14,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/propertyLogo"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:src="@color/subtitle"/>
