--- a/app/src/main/res/layout/fragment_add_property.xml
+++ b/app/src/main/res/layout/fragment_add_property.xml
@@ -135,7 +135,7 @@
             android:paddingBottom="12dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/corner_bottom_white_background"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/ll">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -147,10 +147,10 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/propertyDetails"
+                    android:id="@+id/propertyDetailsText"
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="15dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/roboto_medium"
@@ -164,14 +164,15 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/propertyLogoCard"
-                    android:layout_width="170dp"
+                    android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:strokeWidth="1dp"
                     app:strokeColor="@color/subtitle"
                     app:cardCornerRadius="10dp"
                     android:layout_marginTop="5dp"
+                    app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintBottom_toBottomOf="@id/ll6"
-                    app:layout_constraintStart_toStartOf="@id/ll2"
+                    app:layout_constraintStart_toStartOf="@id/propertyDetailsText"
                     app:layout_constraintTop_toTopOf="@id/ll6">
                     <LinearLayout
                         android:id="@+id/propertyLogoLayout"
@@ -208,6 +209,90 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <LinearLayout
+                    android:id="@+id/imageEditLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@id/propertyLogoCard"
+                    app:layout_constraintEnd_toEndOf="@id/propertyLogoCard"
+                    app:layout_constraintStart_toStartOf="@id/propertyLogoCard"
+                    app:layout_constraintTop_toBottomOf="@id/propertyLogoCard">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:elevation="20dp"
+                        android:src="@drawable/svg_upper_triangle"
+                        app:tint="@color/lightBlack" />
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="15dp"
+                        android:layout_marginBottom="15dp"
+                        android:elevation="6dp"
+                        app:cardBackgroundColor="@color/lightBlack"
+                        app:cardCornerRadius="12dp"
+                        app:cardElevation="6dp">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:id="@+id/replaceImage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical"
+                                android:padding="12dp">
+
+                                <ImageView
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:src="@drawable/svg_gallery_edit" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/roboto_medium"
+
+                                    android:text="Replace"
+                                    android:textColor="@color/white" />
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:id="@+id/removeImage"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:orientation="vertical"
+                                android:padding="12dp">
+
+                                <ImageView
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:src="@drawable/svg_gallery_remove" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/roboto_medium"
+                                    android:text="Remove"
+
+                                    android:textColor="@color/white" />
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </com.google.android.material.card.MaterialCardView>
+                </LinearLayout>
+
+
+                <LinearLayout
                     android:id="@+id/ll6"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -216,7 +301,7 @@
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/propertyLogoCard"
-                    app:layout_constraintTop_toBottomOf="@id/propertyDetails">
+                    app:layout_constraintTop_toBottomOf="@id/propertyDetailsText">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -282,10 +367,9 @@
                     android:id="@+id/ll2"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="40dp"
                     android:orientation="vertical"
                     app:layout_constraintEnd_toEndOf="@id/ll6"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/propertyDetailsText"
                     app:layout_constraintTop_toBottomOf="@id/ll6">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -342,7 +426,7 @@
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:spanCount="2"
                     android:layout_marginTop="10dp"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="20dp"
                     tools:listitem="@layout/item_amenities"
                     app:layout_constraintTop_toBottomOf="@id/add"/>
 
@@ -368,7 +452,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="45dp"
                         android:layout_marginTop="15dp"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="20dp"
                         android:layout_weight="1"
                         android:fontFamily="@font/roboto_medium"
                         android:paddingVertical="5dp"
@@ -379,22 +463,22 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="40dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="20dp"
                         android:layout_marginVertical="8dp"
                         app:cardCornerRadius="10dp"
                         app:cardElevation="2dp">
 
                         <EditText
+                            style="@style/TextAppearance.AppCompat.Body1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            style="@style/TextAppearance.AppCompat.Body1"
                             android:background="@null"
-                            android:minHeight="120dp"
-                            android:maxHeight="180dp"
-                            android:hint="Describe the room"
                             android:gravity="start"
-                            android:padding="8dp"/>
+                            android:hint="Describe the room"
+                            android:maxHeight="180dp"
+                            android:minHeight="120dp"
+                            android:padding="8dp" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -405,7 +489,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Images"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/roboto_medium"
                     android:textSize="@dimen/H4"
@@ -428,9 +512,12 @@
                     android:id="@+id/imagesRecycler"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="5"
+                    tools:listitem="@layout/item_image"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginStart="40dp"
+                    android:layout_marginStart="20dp"
                     app:layout_constraintTop_toBottomOf="@id/imagesT"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -441,7 +528,7 @@
             android:id="@+id/addressLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="gone"
             android:paddingBottom="12dp"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/corner_bottom_white_background"
